WebCore/DerivedSources.cpp
@@ -174,6 +174,7 @@
 #include "JSIDBDatabaseRequest.cpp"
 #include "JSIDBErrorEvent.cpp"
 #include "JSIDBEvent.cpp"
+#include "JSIDBObjectStoreRequest.cpp"
 #include "JSIDBRequest.cpp"
 #include "JSIDBSuccessEvent.cpp"
 #include "JSImageData.cpp"
