WebCore/bindings/v8/custom/V8IDBAnyCustom.cpp
@@ -36,6 +36,7 @@
 
 #include "SerializedScriptValue.h"
 #include "V8IDBDatabaseRequest.h"
+#include "V8IDBObjectStoreRequest.h"
 #include "V8IndexedDatabaseRequest.h"
 
 namespace WebCore {
@@ -50,6 +51,8 @@ v8::Handle<v8::Value> toV8(IDBAny* impl)
         return v8::Undefined();
     case IDBAny::IDBDatabaseRequestType:
         return toV8(impl->idbDatabaseRequest());
+    case IDBAny::IDBObjectStoreRequestType:
+        return toV8(impl->idbObjectStoreRequest());
     case IDBAny::IndexedDatabaseRequestType:
         return toV8(impl->indexedDatabaseRequest());
     case IDBAny::SerializedScriptValueType:
